lustre/lod/lod_internal.h
@@ -393,6 +393,7 @@ struct lod_thread_info {
 	/* object allocation avoid guide info */
 	struct lod_avoid_guide		lti_avoid;
 	union lmv_mds_md		lti_lmv;
+	struct dt_allocation_hint	lti_ah;
 };
 
 extern const struct lu_device_operations lod_lu_ops;
