lustre/osp/osp_precreate.c
@@ -1412,7 +1412,8 @@ static int osp_precreate_ready_condition(const struct lu_env *env,
  * \retval		-EAGAIN try later, slow precreation in progress
  * \retval		-EIO when no access to OST
  */
-int osp_precreate_reserve(const struct lu_env *env, struct osp_device *d)
+int osp_precreate_reserve(const struct lu_env *env, struct osp_device *d,
+			  bool can_block)
 {
 	time64_t expire = ktime_get_seconds() + obd_timeout;
 	int precreated, rc, synced = 0;
@@ -1497,6 +1498,12 @@ int osp_precreate_reserve(const struct lu_env *env, struct osp_device *d)
 
 		if (ktime_get_seconds() >= expire) {
 			rc = -ETIMEDOUT;
+			break;
+		}
+
+		if (!can_block) {
+			LASSERT(d->opd_pre);
+			rc = -ENOBUFS;
 			break;
 		}
 
